# business-case-builder

./: .gitignore  README.md  pyproject.toml  specify.md
.github/agents/: bcb.agent.md  business-case-builder.agent.md  copilot-instructions.md
.github/prompts/: bcb.prompt.md  business-case-builder.prompt.md
scripts/: check_setup.py  fetch_ado_item.py  generate_charts.py  generate_report.py  models.py  parse_pptx.py  search_sharepoint.py  sharepoint_auth.py
specs/001-business-case-builder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-business-case-builder/checklists/: requirements.md
specs/001-business-case-builder/contracts/: agent.md
templates/: business-case-template.dotx
tests/: conftest.py  test_fetch_ado_item.py  test_generate_charts.py  test_generate_report.py  test_parse_pptx.py  test_search_sharepoint.py
tests/fixtures/: sample-ado-response.json  sample-feature.json  sample-presentation.pptx  sample-sharepoint.pptx  sample-sharepoint.xlsx
